# macau_bots

./: .gitignore  card.py  game_logger.py  game_master.py  game_state.py  macau_rules.py  makao_game.py  player.py  pyproject.toml  simulation.py
eda/: game_analysis.ipynb  pomysly-na-analize
eda/simulation_results/: 1cdd591f_macau_simulation_results.json
tests/: test_game_master.py  test_macau_game.py  test_player.py
